install/kubernetes/principal/principal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: argocd-agent-principal
  name: argocd-agent-principal
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-agent-principal
      app.kubernetes.io/part-of: argocd-agent
      app.kubernetes.io/component: principal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-agent-principal
        app.kubernetes.io/part-of: argocd-agent
        app.kubernetes.io/component: principal
    spec:
      containers:
        - args:
            - principal
          image: argocd-agent
          imagePullPolicy: Always
          name: argocd-agent-principal
          ports:
            - containerPort: 8443
              name: principal
            - containerPort: 6379
              name: redis-proxy
            - containerPort: 8000
              name: metrics
            - containerPort: 8003
              name: healthz
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: jwt-secret
              mountPath: /app/config/jwt
            - name: userpass-passwd
              mountPath: /app/config/userpass
            - name: redis-proxy-server-tls
              mountPath: /app/config/redis-proxy-server-tls
              readOnly: true
            - name: redis-tls-ca
              mountPath: /app/config/redis-tls
              readOnly: true
      serviceAccountName: argocd-agent-principal
      volumes:
      - name: userpass-passwd
        secret:
          secretName: argocd-agent-principal-userpass
          items:
          - key: passwd
            path: passwd
          optional: true
      - name: jwt-secret
        secret:
          secretName: argocd-agent-jwt
          items:
          - key: jwt.key
            path: jwt.key
          optional: true
      - name: redis-proxy-server-tls
        secret:
          secretName: argocd-redis-proxy-tls
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          optional: true
      - name: redis-tls-ca
        secret:
          secretName: argocd-redis-tls
          items:
          - key: ca.crt
            path: ca.crt
          optional: true
