install/kubernetes/principal/principal-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-agent-principal
    app.kubernetes.io/part-of: argocd-agent
    app.kubernetes.io/component: principal
  name: argocd-agent-principal
spec:
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
  selector:
    app.kubernetes.io/name: argocd-agent-principal
  type: LoadBalancer
