install/kubernetes/principal/principal-healthz-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-agent-principal
    app.kubernetes.io/part-of: argocd-agent
    app.kubernetes.io/component: principal
  name: argocd-agent-principal-healthz
spec:
  ports:
    - name: healthz
      protocol: TCP
      port: 8003
      targetPort: 8003
  selector:
    app.kubernetes.io/name: argocd-agent-principal
