install/kubernetes/principal/principal-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-agent-principal
    app.kubernetes.io/part-of: argocd-agent
    app.kubernetes.io/component: principal
  name: argocd-agent-principal-metrics
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app.kubernetes.io/name: argocd-agent-principal
