install/kubernetes/principal/principal-redis-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-agent-redis-proxy
    app.kubernetes.io/part-of: argocd-agent
    app.kubernetes.io/component: redis-proxy
  name: argocd-agent-redis-proxy
spec:
  ports:
  - name: redis-proxy
    protocol: TCP
    port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: argocd-agent-principal
