install/kubernetes/principal/principal-resource-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-agent-resource-proxy
    app.kubernetes.io/part-of: argocd-agent
    app.kubernetes.io/component: resource-proxy
  name: argocd-agent-resource-proxy
spec:
  ports:
  - name: resource-proxy
    protocol: TCP
    port: 9090
    targetPort: 9090
  selector:
    app.kubernetes.io/name: argocd-agent-principal
